<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记账簿</string>
    <string name="menu_settings">设置</string>
    <string name="submit">提交</string>
    <string name="item">项目</string>
    <string name="date">日期</string>
    <string name="category">类别</string>
    <string name="money">金额</string>
    <string name="note">备注</string>
    <string name="small_text">正在进入...</string>
    <string name="gets">查询</string>
    <string name="menu_quit">退出</string>

</resources>